--- a/KittenExtensions/KittenExtensions.props
+++ b/KittenExtensions/KittenExtensions.props
@@ -9,7 +9,7 @@
     <PackageReference Include="Lib.Harmony" Version="2.4.2" />
 
     <ModFile Include="$(OutputPath)\$(ModName).dll" />
-    <ModFile Include="Content\*.*" />
+    <ModFile Include="..\Content\*.*" />
 
     <_KsaAssemblies Include="$(KSADir)Brutal*.dll" Path="%(FullPath)" />
     <_KsaAssemblies Include="$(KSADir)KSA.dll" Path="%(FullPath)" />
