Switch patching to use XPathPatch library

--- a/Content/mod.toml
+++ b/Content/mod.toml
@@ -2,4 +2,4 @@
 name = "KittenExtensions"
 
 assets = [ "Assets.xml" ]
-# patches = [ "TestPatch1.xml", "TestPatch2.xml" ]
+patches = [ "TestPatch1.xml", "TestPatch2.xml" ]
